some css changed

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                   <br>
                   <button class="card_button"> LEARN MORE </button>
             </div>
-            <div class="card1" style="text-align: center">
+            <div class="card1 card2" style="text-align: center">
               <br>
               <p class="card_text">Professional</p>
               <br>
