aligning toggling container to center

--- a/index.html
+++ b/index.html
@@ -29,14 +29,16 @@
   </head>
   <body>
     <div class="main">
-      <h1 class="heading" style="color: hsl(233, 13%, 49%)"> Our Pricing </h1>
+      <h1 class="heading"> Our Pricing </h1>
       <div class="space"></div>
-     <span> <span style="color:hsl(234, 14%, 74%)">Annually  </span>
+     <div class="toggling"> 
+      <span class="Annually">Annually  </span>
      <label class="switch">
        <input type="checkbox" id="Toggle">
        <span class="slider round"></span>
      </label>
-     <span style="color:hsl(234, 14%, 74%)">  Monthly</span></span>
+     <span class="Monthly">  Monthly</span>
+    </div>
      <section>
         <div class="cards">
             <div class="card1" style="text-align: center">
